<resources>
    <string name="app_name">TuCofradia 2</string>
    <string name="news">Noticias</string>
    <string name="settings">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth">Autenticación</string>
    <string name="contact">Contacto</string>
    <string name="drawer_open">Abrir drawer</string>
    <string name="drawer_close">Cerrar drawer</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="signin">Registro</string>
    <string name="login">Inicio sesión</string>
    <string name="register">Registrarme</string>
    <string name="log">Iniciar sesión</string>
    <string name="name">Nombre</string>
    <string name="repeat_password_hint">Repite la contraseña</string>
    <string name="error">Error</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit">Editar</string>
    <string name="play">Jugar</string>
    <string name="save">Guardar</string>
    <string name="join">Unirme</string>
    <string name="players">Cofradías: %d/%d</string>
    <string name="server_code">Código: %s</string>
    <string name="servers">Servidores</string>
    <string name="filters">Filtros</string>
    <string name="search">Buscar</string>
    <string name="clear">Limpiar</string>
    <string name="_public">Público</string>
    <string name="message">Mensaje</string>
    <string name="server_name">Nombre del servidor</string>
    <string name="server_code_hint">Código del servidor</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="profile_message_hint">Mensaje de perfil</string>
    <string name="full">Llenos</string>
    <string name="server_full">El servidor está lleno.</string>
    <string name="back">Volver</string>
    <string name="guild_name_hint">Nombre de la cofradía</string>
    <string name="remember">Recuérdame</string>
    <string name="create_guild">Crear cofradía</string>
    <string name="guild_cuote_hint">Cuota</string>
    <string name="leave">Salir</string>
    <string name="leave_server">¿Desea abandonar el servidor?</string>
    <string name="description">Descripción</string>
    <string name="max_players">Máximos jugadores</string>
    <string name="search_servers">Buscar servidores</string>
    <string name="my_servers">Mis servidores</string>
    <string name="create_server">Crear servidor</string>
    <string name="server_name_hint">Nombre del servidor *</string>
    <string name="server_description_hint">Descripción</string>
    <string name="guild_max_players_hint">Cantidad máxima de jugadores *</string>
    <string name="server_password_hint">Contraseña (Vacío = Público)</string>
    <string name="code">Código</string>
    <string name="include_full">Incluir llenos</string>
</resources>