<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:iconTint="@color/white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/newsFragment"
            android:icon="@drawable/ic_news"
            android:title="@string/news"
            app:iconTint="@color/white"
            app:showAsAction="ifRoom" />
<!--        <item-->
<!--            android:id="@+id/settingsFragment"-->
<!--            android:icon="@drawable/ic_settings"-->
<!--            app:iconTint="@color/white"-->
<!--            android:title="@string/settings"-->
<!--            app:showAsAction="ifRoom" />-->
    </group>
</menu>