<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    style="@style/ViewRoot"
    tools:context=".ui.game.createGuild.CreateGuildFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        style="@style/Card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guild_name_hint"
                android:inputType="text"
                android:maxLength="55" />

            <EditText
                android:id="@+id/etCuote"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guild_cuote_hint"
                android:inputType="number"
                android:maxLength="1" />

            <Button
                android:id="@+id/btnCreateGuild"
                style="@style/Button.Option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_guild" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>